# boost.dynamic_config

./: CMakeLists.txt  test-main.cpp
cmake_additional/: FindFFMPEG.cmake  FindGUPNPIGD.cmake  FindJRTPLIB.cmake  FindJTHREAD.cmake  FindLIBEVENT.cmake  FindLiveMedia.cmake  FindMPEG4IP.cmake  FindMySQL.cmake  FindOPAL.cmake  FindPCAP.cmake  FindPORTAUDIO.cmake  FindPTLIB.cmake  FindRESIP.cmake  FindSPEEX.cmake  FindSWSCALER.cmake  FindTBB.cmake  FindVOIPCODECS.cmake  FindX264.cmake
include/boost/dynamic_config/: backend.hpp  map_backend.hpp  property_config.hpp  windows_registry_backend.hpp
